# llm-based-unmanned-store-kiosk

./: .gitattributes  .gitignore  README.md  build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
kiosk/: build.gradle.kts
kiosk/src/main/: AndroidManifest.xml
kiosk/src/main/cpp/: CMakeLists.txt  LlmClient.cpp  LlmClient.java  main.cpp  native-lib.cpp
kiosk/src/main/java/com/kiosk/: data - 바로 가기.lnk
kiosk/src/main/java/com/kiosk/jarvis/: KioskApp.kt  MainActivity.kt  adminActivity.kt
kiosk/src/main/java/com/kiosk/jarvis/bootstrap/: mappers.kt  preload.kt
kiosk/src/main/java/com/kiosk/jarvis/core/: AudioBufferStore.kt  CircularAudioBuffer.kt  MainViewModel.kt  SqliteHelper.kt
kiosk/src/main/java/com/kiosk/jarvis/data/: InventoryManager.kt
kiosk/src/main/java/com/kiosk/jarvis/engine/: LlmClient.java  OfflineRecognizer.kt
kiosk/src/main/java/com/kiosk/jarvis/feature/: VadManager.kt
kiosk/src/main/java/com/kiosk/jarvis/model/: Alert.kt  DashboardModels.kt  FleetModels.kt  InventoryModels.kt  OrderItem.kt  PricingModels.kt  Product.kt  ProductModels.kt  RemoteControlAction.kt  SalesData.kt  SecurityModels.kt  StoreSchedule.kt  device.kt
kiosk/src/main/java/com/kiosk/jarvis/navigation/: AppNavHost.kt  AppNavigation.kt  NavigationDrawer.kt
kiosk/src/main/java/com/kiosk/jarvis/repository/: DashboardRepository.kt  FleetRepository.kt  InventoryRepository.kt  KioskRepository.kt  OrderRepository.kt  PricingRepository.kt  ProductRepository.kt  SecurityRepository.kt
kiosk/src/main/java/com/kiosk/jarvis/route/: Routes.kt
(+41 files in other folders)
